# ROS_Robot

./: .gitignore  Dockerfile
install/ackermann_steering_controller/include/ackermann_steering_controller/: ackermann_steering_controller_parameters.hpp
install/ackermann_steering_controller/share/ackermann_steering_controller/: ackermann_steering_controller.xml  local_setup.bash  local_setup.dsv  local_setup.sh  local_setup.zsh  package.sh  package.xml
install/admittance_controller/include/admittance_controller/: admittance_controller_parameters.hpp
install/admittance_controller/share/admittance_controller/: admittance_controller.xml  local_setup.bash  local_setup.dsv  local_setup.sh  local_setup.zsh  package.sh  package.xml
install/app_subscriber/lib/app_subscriber/: data_controller  feedback_publisher  listener_node
install/app_subscriber/share/app_subscriber/: package.dsv  package.ps1  package.sh  package.xml
install/bicycle_steering_controller/include/bicycle_steering_controller/: bicycle_steering_controller_parameters.hpp
install/controller_manager/lib/controller_manager/: spawner  (+3 more)
log/: latest_build  latest_list
src/app_subscriber/: setup.cfg  setup.py
src/app_subscriber/app_subscriber/: data_controller_node.py
src/app_subscriber/config/: ekf.yaml
src/distance_pid/: setup.cfg  setup.py
src/distance_pid/distance_pid/: pid_node_py
src/log/: latest_build  latest_list
src/mecanum_bot/: package.xml  setup.cfg  setup.py
src/mecanum_bot/config/: controllers.yaml  ekf.yaml
src/mecanum_bot/description/: robot.urdf.xacro
src/mecanum_bot/launch/: bringup.launch.py  test_hardware.launch.py
src/mecanum_bot/mecanum_bot/: data_controller_node.py  pid.py
src/mecanum_hardware/: CMakeLists.txt  package.xml
src/mecanum_hardware/include/mecanum_hardware/: mecanum_system.hpp
src/mecanum_hardware/src/: mecanum_system.cpp
(+984 files in other folders)
